--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,7 +63,7 @@ jobs:
       - name: Checkout csdp-salesdemo_applications
         uses: actions/checkout@v3
         with:
-          repository: PiBog/canary-rollout # change to real repo
+          repository: pysarenko-bohdan/canary-rollout # change to real repo
           path: .
       - name: Update application version
         run: |
