--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -1,11 +1,12 @@
 name: Github-action-demo
 
 on:
-  pull_request:
-    branches:
-      - master
+  label:
     types:
       - closed
+  push:
+    branches:
+      - master
 jobs:
   build:
     environment:
